# pi-cluster-monitor

./: .gitignore  README.md  pyproject.toml  slim.Dockerfile
deployment/: daemonset.yaml  secret.template.yaml  test-pod.yaml
monitor/: config.py  main.py  probe.py
