[tool.poetry]
name = "monitor"
version = "0.1.0"
description = ""
authors = ["Bengt Sjögren <Bengan92@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
psutil = "^5.9.5"
influxdb3-python = "^0.2.1"
# prometheus-client = "^0.17.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
